--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
             zip -r9 ../../../../function.zip .
       - run:
           name: Add App to Zipfile
-          command: zip -g ./function.zip .env -r app
+          command: zip -g ./function.zip -r app
       - persist_to_workspace:
           root: .
           paths:
@@ -45,26 +45,26 @@ jobs:
           aws-secret-access-key: AWS_SECRET_ACCESS_KEY
       - run:
           name: Upload to S3
-          command: aws s3 cp function.zip s3://fastapi-circleci/function.zip
+          command: aws s3 cp function.zip s3://<YOUR_S3_BUCKET_NAME>/function.zip
       - run:
           name: Deploy new Lambda
-          command: aws lambda update-function-code --function-name fastapi-circleci-lambda --s3-bucket fastapi-circleci --s3-key function.zip
+          command: aws lambda update-function-code --function-name <YOUR_LAMBDA_NAME> --s3-bucket <your_s3_bucket_name> --s3-key function.zip
 
 
 workflows:
   build-test-and-deploy:
     jobs:
       - build-and-test:
-          context: fastapi-circleci-lambda
+          context: <YOUR_CONTEXT_NAME>
           filters:
             branches:
               only:
-                - master
+                - cicd-demo-dev
       - deploy-dev:
-          context: fastapi-circleci-lambda
+          context: <YOUR_CONTEXT_NAME>
           requires:
             - build-and-test
           filters:
             branches:
               only:
-                - master
+                - cicd-demo-dev
