--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
             echo "source ./env/bin/activate" >> $BASH_ENV
       - run:
           name: Install Dependencies
-          command: pip install -r requirements.txt
+          command: pip3 install -r requirements.txt
       - run:
           name: Test
           command: pytest
