--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,6 @@ version: 2.1
 
 orbs:
   python: circleci/python@0.3.2
-  aws-cli: circleci/aws-cli@1.2.1
 
 jobs:
   build-and-test:
@@ -10,6 +9,7 @@ jobs:
       name: python/default
       tag: '3.7'
     steps:
+      - checkout
       - run:
           name: Setup Virtual env
           command: |
@@ -17,53 +17,15 @@ jobs:
             echo "source ./env/bin/activate" >> $BASH_ENV
       - run:
           name: Install Dependencies
-          command: pip3 install -r requirements.txt
+          command: pip install -r requirements.txt
       - run:
           name: Test
           command: pytest
-      - run:
-          name: Create Zipfile archive of Dependencies
-          command: |
-            cd env/lib/python3.7/site-packages
-            zip -r9 ../../../../function.zip .
-      - run:
-          name: Add App to Zipfile
-          command: zip -g ./function.zip -r app
-      - persist_to_workspace:
-          root: .
-          paths:
-            - function.zip
-
-  deploy-dev:
-    executor: aws-cli/default
-    steps:
-      - attach_workspace:
-          at: ./
-      - aws-cli/setup:
-          aws-region: AWS_DEFAULT_REGION
-          aws-access-key-id: AWS_ACCESS_KEY_ID
-          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
-      - run:
-          name: Upload to S3
-          command: aws s3 cp function.zip s3://<YOUR_S3_BUCKET_NAME>/function.zip
-      - run:
-          name: Deploy new Lambda
-          command: aws lambda update-function-code --function-name <YOUR_LAMBDA_NAME> --s3-bucket <your_s3_bucket_name> --s3-key function.zip
-
 
 workflows:
   build-test-and-deploy:
     jobs:
       - build-and-test:
-          context: fastapi-circleci-lambda
-          filters:
-            branches:
-              only:
-                - master
-      - deploy-dev:
-          context: fastapi-circleci-lambda
-          requires:
-            - build-and-test
           filters:
             branches:
               only:
