--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,21 @@ jobs:
           root: .
           paths:
              - function.zip
+  deploy-dev:
+    executor: aws-cli/default
+    steps:
+      - attach_workspace:
+          at: ./
+      - aws-cli/setup:
+          aws-region: AWS_DEFAULT_REGION
+          aws-access-key-id: AWS_ACCESS_KEY_ID
+          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
+      - run:
+          name: Upload to S3
+          command: aws s3 cp function.zip s3://fastapi-circleci/function.zip
+      - run:
+          name: Deploy new Lambda
+          command: aws lambda update-function-code --function-name fastapi-circleci-lambda --s3-bucket fastapi-circleci --s3-key function.zip
 
 workflows:
   build-test-and-deploy:
